RemoteDriverCreator was added and used for test execution